--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Built application files
-*.apk
+#*.apk
 *.ap_
 *.aab
 
@@ -16,7 +16,7 @@ out/
 
 # Gradle files
 .gradle/
-build/
+#build/
 
 # Local configuration file (sdk path, etc)
 local.properties
